--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
    </head>
    <!-- body -->
    <body class="main-layout">
-      <!-- loader  -->
+      <!-- loader  
       <div class="loader_bg">
          <div class="loader"><img src="images/loading.gif" alt="#" /></div>
       </div>
-      <!-- end loader -->
+      end loader -->
       <!-- header -->
       <header>
          <!-- header inner -->
@@ -60,13 +60,13 @@
                            <div class="collapse navbar-collapse" id="navbarsExample04">
                               <ul class="navbar-nav mr-auto">
                                  <li class="nav-item">
-                                    <a class="nav-link" href="#"> Home  </a>
+                                    <a class="nav-link" href="index.html"> Home  </a>
                                  </li>
                                  <li class="nav-item">
-                                    <a class="nav-link" href="#">About</a>
+                                    <a class="nav-link" href="about.html">About</a>
                                  </li>
                                  <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
+                                    <a class="nav-link" href="contact.html">Contact</a>
                                  </li>
                               </ul>
                            </div>
@@ -179,7 +179,7 @@
                   </div>
                   <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                      <div class="our_text_box">
-                        <h3 class="awesome pa_wi">Garantie la coroziune =: 50 ani </h3>      
+                        <h3 class="awesome pa_wi">Garantie la coroziune: 50 ani </h3>      
                              	 <p>	
 				   <h3>Classică</h3>				 
 					Grosime:0,50 <br>
@@ -357,7 +357,7 @@
                            <h2 class="form_contril" >Number: <a class="form_contril" href="tel:+37360401141">068657864</a></h2>
                         </div>
                         <div class="col-md-12">
-                           <h2 class="form_contril">Email: oselschi.pavel@roofart.md</h2> 
+                           <h2 class="form_contril">Email: pavel.oselschi@roofart.md</h2> 
                         </div>
                         <div class="col-md-12">
                            <h2 class="textarea" >Manager vânzări</h2>
